--- a/todo.txt
+++ b/todo.txt
@@ -18,14 +18,14 @@ TO DO:
 ############6. Starfsmaður skal geta leitað eftir öðru starfsfólki
 	############Það þarf að setja þetta upp þannig að það sé hægt að leita eftir nafni starfsmans líka en ekki 	bara id 
 
-7. Starfsmaður skal geta listað fasteignir eftir áfangastað/staðsetningu
-	Þetta er eiginlega klárt, það þarf bara að laga til þar sem stendur Staður:1 (á að koma upp 	áfangastaður en ekki ID)
+############7. Starfsmaður skal geta listað fasteignir eftir áfangastað/staðsetningu
+	############Þetta er eiginlega klárt, það þarf bara að laga til þar sem stendur Staður:1 (á að koma upp 	áfangastaður en ekki ID)
 
 8. Starfsmaður skal geta merkt verkbeiðni sem tilbúna fyrir lokun af yfirmanni
 	ekki tilbúið, það þarf að laga þetta til eitthvað
 
-9. Starfsmaður skal geta opnað og þannig skoðað verkskýrslur 
-	ekki klárt þarf að gera leiðbeiningar ?? held ég
+###########9. Starfsmaður skal geta opnað og þannig skoðað verkskýrslur 
+	############ekki klárt þarf að gera leiðbeiningar ?? held ég
 
 10. Starfsmaður skal geta skráð verkskýrslu á opna verkbeiðnir 
 	Óklárað, þarf að skoða þetta
