--- a/todo.txt
+++ b/todo.txt
@@ -6,10 +6,10 @@ TO DO:
 ############2. Starfsmaður skal geta fundið allar skýrslur sem unnar eru af ákveðnum starfsmanni 
 	Það vantar leiðbeiningar hvernig maður getur séð þetta 
 
-3. Starfsmaður skal geta fundið allar verkbeiðnir fyrir ákveðna fasteign
+############3. Starfsmaður skal geta fundið allar verkbeiðnir fyrir ákveðna fasteign
 	Það þarf að skoða þetta eitthvað/fínpússa
 
-4. Starfsmaður skal geta fundið allar verkbeiðnir sem eru unnar af ákveðnum starfsmanni
+############4. Starfsmaður skal geta fundið allar verkbeiðnir sem eru unnar af ákveðnum starfsmanni (verkskýrslur)
 	á eftir að bæta við í starfsmenn
 
 5. Starfsmaður skal geta leitað að verkbeiðni eftir auðkenni hennar (er auðkenni ID? 
