--- a/todo.txt
+++ b/todo.txt
@@ -21,8 +21,8 @@ TO DO:
 ############7. Starfsmaður skal geta listað fasteignir eftir áfangastað/staðsetningu
 	############Þetta er eiginlega klárt, það þarf bara að laga til þar sem stendur Staður:1 (á að koma upp 	áfangastaður en ekki ID)
 
-8. Starfsmaður skal geta merkt verkbeiðni sem tilbúna fyrir lokun af yfirmanni
-	ekki tilbúið, það þarf að laga þetta til eitthvað
+############8. Starfsmaður skal geta merkt verkbeiðni sem tilbúna fyrir lokun af yfirmanni
+	############ekki tilbúið, það þarf að laga þetta til eitthvað
 
 ###########9. Starfsmaður skal geta opnað og þannig skoðað verkskýrslur 
 	############ekki klárt þarf að gera leiðbeiningar ?? held ég
