Lagaði aðeins útlit

--- a/todo.txt
+++ b/todo.txt
@@ -36,17 +36,17 @@ TO DO:
 12. Yfirmaður skal geta samþykkt tilbúnar verkskýrlsur
 	óklárað 
 
-13. Yfirmaður skal geta séð lista yfir allar sínar verkbeiðnir
+########13. Yfirmaður skal geta séð lista yfir allar sínar verkbeiðnir
 	óklárað
 
 14. Yfirmaður skal geta séð um skráningu á öllum kostnaði á viðhaldi og rekstri 
 	Þetta er alveg eftir, þarf að finna útúr því hvernig við viljum hafa þetta sett upp í forritinu
 
-15. Yfirmaður skal geta séð upplýsingar um starfsmenn (undirmenn)
+######### 15. Yfirmaður skal geta séð upplýsingar um starfsmenn (undirmenn)
 	Það þarf að flokka starfsmenn eftir staðsetningu. Yfirmenn geta þá bara séð starfsmenn á 	sínum áfangastað
 
 16. Yfirmaður skal geta skráð starf starfsmanna Er þetta innifalið í skráningu starfsmanna???/ 
-	klárað (þarf að skoða þetta eitthvað)
+	klárað (þarf að skoða þetta eitthvað) ( Er það þá munurinn á Verktaka og starfsmanni?)
 
 17. Yfirmaður skal geta stofnað nýja verkbeiðni fyrir fasteignirnar Komið? Bara sett á annan stað (ss gerir verkbeiðni í verkbeiðni)
 	Vantar leiðbeiningar
